--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="EcoRide est une plateforme française de covoiturage engagée dans la création de trajets plus écologiques et solidaires. En offrant des solutions de transport responsables et adaptées à tous types de déplacements, elle favorise une mobilité durable et respectueuse de l'environnement.">
     <meta name="keywords" content="Covoiturage, Ecologie, Trajet, Partager voiture, "> 
-    <link rel="icon" type="image/svg" href="img/logo/icon.svg">
+    <link rel="icon" type="image/svg" href="img/logo/favicon.svg">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -14,29 +14,35 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/pages.css">
     <link rel="stylesheet" href="style/responsive.css">
+    <!--PWA-->
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
-    <header>
-        <!--Burger menu icon-->
-        <svg class="header-icon" data-bs-toggle="offcanvas" href="#side-menu" aria-controls="side-menu" type="button" role="button" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Ouvrir le menu de navigation latéral">
-            <path class="header-icon__color" d="M3.5625 6C3.5625 5.58579 3.89829 5.25 4.3125 5.25H20.3125C20.7267 5.25 21.0625 5.58579 21.0625 6C21.0625 6.41421 20.7267 6.75 20.3125 6.75L4.3125 6.75C3.89829 6.75 3.5625 6.41422 3.5625 6Z" fill="#323544"/>
-            <path class="header-icon__color" d="M3.5625 18C3.5625 17.5858 3.89829 17.25 4.3125 17.25L20.3125 17.25C20.7267 17.25 21.0625 17.5858 21.0625 18C21.0625 18.4142 20.7267 18.75 20.3125 18.75L4.3125 18.75C3.89829 18.75 3.5625 18.4142 3.5625 18Z" fill="#323544"/>
-            <path class="header-icon__color" d="M4.3125 11.25C3.89829 11.25 3.5625 11.5858 3.5625 12C3.5625 12.4142 3.89829 12.75 4.3125 12.75L20.3125 12.75C20.7267 12.75 21.0625 12.4142 21.0625 12C21.0625 11.5858 20.7267 11.25 20.3125 11.25L4.3125 11.25Z" fill="#323544"/>
-        </svg>   
-        <!--Logo-->
-        <img class="ecoride-logo ecoride-logo__header" src="img/logo/logo-without-slogan.svg" alt="Logo EcoRide" aria-hidden="true">
-        <!--User icon-->
-        <div class="dropdown">
-            <svg class="header-icon dropdown-toggle" type="button" role="button" id="triggerId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#323544" viewBox="0 0 24 24" aria-label="Ouvrir ou fermer la liste déroulante">
-                <path class="header-icon__color" fill-rule="evenodd" d="M12 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4h-4Z" clip-rule="evenodd"/>
-            </svg> 
-            <div class="dropdown-menu" id="dropdown-menu-override" aria-labelledby="triggerId">
-                <a class="dropdown-item d-flex align-items-center" href="#" role="link">Connexion</a>
-                <a class="dropdown-item d-flex align-items-center" href="#"  role="link">Inscription</a>
+    <div class="fixed">
+        <div class="credit-banner" style="background-color:#f3b271;justify-content:center;"><p style="text-align:center;font-size:0.87rem;margin:auto;">Plateforme en développement</p></div>    
+        <header>
+            <div class="header-div-left">
+                <!--Burger menu icon-->
+                <img class="header-icon menu-icon" data-bs-toggle="offcanvas" href="#side-menu" aria-controls="side-menu" type="button" role="button" src="img/icons/menu-icon-white.svg" alt="Icon 'menu'" aria-label="Ouvrir le menu de navigation latéral">
+                <img class="header-icon search-icon" src="img/icons/search-icon-white.svg" alt="Icon 'loupe' de recherche">    
             </div>
-        </div>           
-    </header>
+            <!--Logo-->
+            <img class="ecoride-logo ecoride-logo__header" src="img/logo/logo-without-slogan.svg" alt="Logo EcoRide" aria-hidden="true">
+            <div class="header-div-right">
+                <!--User icon-->
+                <div class="dropdown">
+                    <svg class="header-icon user-icon dropdown-toggle" type="button" role="button" id="triggerId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 24 24" aria-label="Ouvrir ou fermer la liste déroulante">
+                        <path class="header-icon__color" fill-rule="evenodd" d="M12 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4h-4Z" clip-rule="evenodd"/>
+                    </svg> 
+                    <div class="dropdown-menu" id="dropdown-menu-override" aria-labelledby="triggerId">
+                        <a class="dropdown-item d-flex align-items-center" href="portal/login.html" role="link">Connexion</a>
+                        <a class="dropdown-item d-flex align-items-center" href="portal/signup.html"  role="link">Inscription</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
 
     <!--Menu latéral gauche-->
     <nav class="offcanvas offcanvas-start" tabindex="-1" role="navigation" id="side-menu">
@@ -57,8 +63,8 @@
         </div>
         <hr><!--Sidebar body (links)-->
         <div>
-            <a href="#" class="side-menu-item" role="link">Connexion</a>
-            <a href="#" class="side-menu-item" role="link">Inscription</a>
+            <a href="portal/login.html" class="side-menu-item" role="link">Connexion</a>
+            <a href="portal/signup.html" class="side-menu-item" role="link">Inscription</a>
             <hr>
         </div>
         <div>
@@ -85,7 +91,7 @@
         </div>
     </nav>
 
-    <main class="d-flex flex-column align-items-center justify-content-center pt-0">
+    <main id="main-homepage" class="d-flex flex-column align-items-center justify-content-center">
         <!--HERO ------------------------------------->
         <section class="hero text-white">
             <div class="w-100">
@@ -101,12 +107,12 @@
         <p>EcoRide est une plateforme française de covoiturage engagée dans la création de trajets plus écologiques et solidaires. En offrant des solutions de transport responsables et adaptées à tous types de déplacements, elle favorise une mobilité durable et respectueuse de l'environnement.</p>
         <p>Chez nous, chaque trajet est une contribution à un avenir plus vert. Nous ne proposons que des covoiturages en voiture afin de réduire le nombre de véhicules sur la route, et limiter l'empreinte carbone. En choisissant notre plateforme, vous contribuez à la préservation de la planète tout en optant pour un transport économique et durable.</p>
         <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center">
-            <div class="col-lg-1">
+            <div>
                 <svg class="homepage-badge-img-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                     <path fill-rule="evenodd" d="M12 2c-.791 0-1.55.314-2.11.874l-.893.893a.985.985 0 0 1-.696.288H7.04A2.984 2.984 0 0 0 4.055 7.04v1.262a.986.986 0 0 1-.288.696l-.893.893a2.984 2.984 0 0 0 0 4.22l.893.893a.985.985 0 0 1 .288.696v1.262a2.984 2.984 0 0 0 2.984 2.984h1.262c.261 0 .512.104.696.288l.893.893a2.984 2.984 0 0 0 4.22 0l.893-.893a.985.985 0 0 1 .696-.288h1.262a2.984 2.984 0 0 0 2.984-2.984V15.7c0-.261.104-.512.288-.696l.893-.893a2.984 2.984 0 0 0 0-4.22l-.893-.893a.985.985 0 0 1-.288-.696V7.04a2.984 2.984 0 0 0-2.984-2.984h-1.262a.985.985 0 0 1-.696-.288l-.893-.893A2.984 2.984 0 0 0 12 2Zm3.683 7.73a1 1 0 1 0-1.414-1.413l-4.253 4.253-1.277-1.277a1 1 0 0 0-1.415 1.414l1.985 1.984a1 1 0 0 0 1.414 0l4.96-4.96Z" clip-rule="evenodd"/>
                 </svg>
             </div>
-            <div class="col-lg-10 d-flex flex-column justify-content-center align-items-center">
+            <div class="d-flex flex-column justify-content-center align-items-center mt-lg-4 mb-lg-4">
                 <h2>Démarches simplifiées</h2>
                 <p>Ne sortez plus votre portefeuille! Grâce à notre système innovant en points de crédit virtuel, les démarches deviennent un jeu d’enfant. Profitez d’une expérience fluide et pratique avec une plateforme facile à prendre en main, conçue pour rendre vos trajets plus simples et accessibles.</p>    
             </div>
@@ -114,8 +120,8 @@
         <img class="homepage-badge-img-2" src="img/logo/logo-leaf-only-green.svg" alt="Feuille du logo EcoRide" aria-hidden="true">
         <h2>Rejoignez-nous</h2>
         <p>Que ce soit pour vos trajets réguliers vers le travail, ou pour vos escapades de week-end et voyages, en tant que chauffeur ou en tant que passager, rejoignez-nous pour une démarche plus respectueuse de l'environnement, tout en profitant de moments partagés et de solutions de déplacement flexibles.</p>
-        <p class="text-center">En plus? Vous gagnez 20 points de crédit à votre inscription!</p>
-        <button role="button" type="button" class="btn btn__orange cta btn-lg text-black">
+        <p class="text-center pt-3">En plus? Vous gagnez 20 points de crédit à votre inscription!</p>
+        <button role="button" type="button" class="btn btn__orange cta btn-lg mt-3 align-items-center" onclick="window.location.href='portal/signup.html'">
             S'inscrire
         </button>
     </main>
@@ -130,8 +136,20 @@
             <a href="#" role="link">FAQ</a>
             <a href="#" role="link">Contact</a>
         </small>
-        <p class="text-center text-white" aria-label="Notre adresse email de contact">contact@ecoride.fr</p>
-        </footer>
-    </body>
+        <p class="text-center m-auto mt-3" aria-label="Notre adresse email de contact">contact@ecoride.fr</p>
+    </footer>
+
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+                console.log('Service Worker enregistré avec succès:', registration);
+            }).catch((error) => {
+                console.log('Échec de l\'enregistrement du Service Worker:', error);
+            });
+            });
+        }
+    </script>          
+</body>
 
 </html>
