--- a/portal/demoModeration.html
+++ b/portal/demoModeration.html
@@ -4,7 +4,7 @@
     <title>Moderation Tools EcoRide</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg" href="img/logo/icon.svg">
+    <link rel="icon" type="image/svg" href="img/logo/favicon.svg">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
 
 <body id="adminMode">
     <div class="fixed">
-        <div class="credit-banner" style="background-color:#f3b271;justify-content:center;"><p style="text-align:center;font-size:0.87rem;">Plateforme en développement!</p></div>    
+        <div class="credit-banner" style="background-color:#f3b271;justify-content:center;"><p style="text-align:center;font-size:0.87rem;margin:auto;">Cette page est une démo</p></div>    
         <header>
             <div class="header-div-left">
                 <!--Burger menu icon-->
@@ -86,8 +86,8 @@
         </div>
     </nav>
 
-    <main>
-
+    <main id="main-userpage">
+        <p style="color:rgba(0,0,0,0.5);" class="text-center">Votre tableau de bord est vide pour l'instant...</p>
     </main>
 
     </body>
